modification de la partie Remi

--- a/index.html
+++ b/index.html
@@ -114,12 +114,16 @@ Articles des MMIA1
     <!-- PARTIE DE REMI -->
 	<div id="news">
 		<h2>
-			News INSERER_NOM !!
+			Donald Trump dénonce: " Emmanuel Macron vole du papier toilette à son travail"
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			Interrogé par notre journaliste, le ministre de l’intérieur a déclaré: « je ne souhaite faire aucun commentaires sur ce sujet. Il est primordial, pour le bon déroulement de l’enquête et pour protéger toutes les parties concernées que les informations sur ce dossier restent confidentielles. » Le Président pourrait quant à lui, « si une informations faisant état d’éléments significatifs venait à se confirmer », faire appel à la collaboration du Royaume de Suède. Un témoin anonyme, que nous appellerons Salah, s’est manifesté auprès de notre rédaction: « J’étais loin, je n’ai pas bien vu. Ce que je peux dire, c’est que ça m’a fais un choc quand même ». Salah raconte son expérience: « J’étais vraiment très loin, je n’ai pas compris ce qui se passais, ça a été très vite, c’est dur d’en dire plus… ». Une passante, elle, déclare: « Moi je ne sais pas, je n’étais pas là, je n’ai rien vu, mais il parait que c’est quelque chose ». L’éventualité qu’un tel évènement se produise semble être faible, étant donné le niveau de confidentialité requis. Il pourrait s’agir d’un évènement rare, voire rarissime, selon l’avis de plusieurs observateurs. Déjà, on évoque différentes pistes pour expliquer cette affaire dont on peine encore, il faut l’avouer, à dénouer tout les enjeux. Il n’est pas exclu que divers éléments encore inconnus soient directement liés a d’autres faits dont on ignore l’existence. « La France aussi est concernée », à prévenu Jean Lassalle, vigilant.
+De nouvelles révélations seront divulguées lors de notre Edition Spéciale qui s’évertuera à décortiquer les détails de ce fait d’actualité peu courant.
+
+
+
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+		<h3>Source : <a href="https://nordpresse.be/f/">Nordpresse</a>
 		</h3>
 	</div>
     <!-- FIN PARTIE -->
