--- a/index.html
+++ b/index.html
@@ -49,10 +49,17 @@ Articles des MMIA1
     <!-- PARTIE DE Nolwenn -->
 	<div id="news">
 		<h2>
-			News INSERER_NOM !!
+			News de Nolwenn 
+            Bretagne : un renard tué par des poules dans un poulailler
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			Un renard a été tué dans un poulailler du Morbihan dans la nuit de lundi à mardi, victime des coups de bec des poules qui savent attaquer sous l'effet de groupe. 
+
+Un jeune renard qui avait pénétré à la tombée de la nuit dans un poulailler a été retrouvé mort au matin, victime de ses proies supposées. Les faits, révélés mardi par la presse locale, se sont déroulés en fin de semaine dernière au sein du poulailler bio du lycée agricole du Gros Chêne, à Pontivy, dans le Morbihan.
+
+Un "effet de groupe". "Chaque matin, vers 8 heures/8h30, on fait une visite du poulailler pour voir si tout va bien. On vérifie si les poules ont assez d'eau, s'il y a encore de l'alimentation (…) Et, là, dans un coin, on a trouvé ce renard mort. Les poules sont très vives, il y a eu un effet de groupe, elles l'ont attaqué à coups de bec", a expliqué à l'AFP Pascal Daniel, responsable d'exploitation au lycée du Gros Chêne. Selon Pascal Daniel, dans ce poulailler où les poules sont en liberté toute la journée et ne rentrent que la nuit ou pour pondre, le renard s'est vraisemblablement introduit sur le site à la tombée de la nuit.
+
+"Piégé par la nuit". Mais, pourchassé par les poules, il n'a pas pu en ressortir car les trappes qui ouvrent sur l'extérieur se ferment automatiquement en fonction de la luminosité. L'animal, "un jeune renard de six ou sept mois", s'est donc retrouvé piégé par la nuit et livré à la vindicte des volatiles, selon la même source.
 		</p>
 		<h3>Source : <a href="#">blabla</a>
 		</h3>
